# steel-defect-analysis

./: .gitignore  LICENSE  pyproject.toml
steel_defect_analysis/: clustering.py  main.py  model.py  plot.py  process.py  train.py
