[tool.poetry]
name = "steel-defect-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "steel_defect_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pytest = "^7.1.3"
numpy = "^1.23.3"
scipy = "^1.9.1"
sklearn = "^0.0"
scikit-image = "^0.19.3"
matplotlib = "^3.6.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
